# YoutubeTranscriptPlus

./: .env.example  .gitignore  README.md  ai_service.py  app.py  gunicorn_config.py  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/api/transcript/: route.ts
components/: auth-button.tsx  session-provider.tsx  transcript-form.tsx
lib/: auth.ts  brand.ts  youtube.ts
static/css/: style.css
static/js/: script.js
templates/: index.html
